--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,10 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #github_username:  jekyll
 
 # Build settings
-theme: minima
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
+show_downloads: false
 
 # Exclude from processing.
 # The following items will not be processed, by default.
