--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Systematic Feature Engineering for Time-Series Data Mining (SFE-TSDM)
 email: a.kempa-liehr@auckland.ac.nz;ben.fulcher@sydney.edu.au
 description: >- # this means to ignore newlines until "baseurl:"
-  SFE-TSM Workshop at 21st IEEE International Conference on Data Mining (IEEE ICDM 2021) <br />
+  SFE-TSDM Workshop at 21st IEEE International Conference on Data Mining (IEEE ICDM 2021) <br />
   December 7-10, 2021 <br />
   Auckland, New Zealand <br />
 baseurl: "" # the subpath of your site, e.g. /blog
